assets/css/beautifuljekyll.css
/* ... */
@media (min-width: 768px) {
  .pagination .page-item .page-link {
    padding: 0.9375rem 1.5625rem;
  }
}
.pagination .page-item .page-link:hover,
.pagination .page-item .page-link:focus {
  color: var(--page-col);
  border: 1px solid var(--hover-col);
  background-color: var(--hover-col);
}

/* --- Tables --- */

table {
  padding: 0;
  overflow-x: auto;
  display: block;
}
table tr {
  border-top: 1px solid #cccccc;
  background-color: var(--page-col);
  margin: 0;
  padding: 0;
}
table tr:nth-child(2n) {
  background-color: #f8f8f8;
}
table tr th,
table tr td {
  border: 1px solid #cccccc;
  text-align: left;
  margin: 0;
  padding: 0.375rem 0.8125rem;
}
table tr th {
  font-weight: bold;
}
table tr th :first-child,
table tr td :first-child {
  margin-top: 0;
}
table tr th :last-child,
table tr td :last-child {
  margin-bottom: 0;
}

/* --- Code blocks --- */

code {
  padding: 0.125rem 0.25rem;
  color: #c7254e;
  background-color: #f9f2f4;
  border-radius: 0.25rem;
}

pre code {
  padding: 0;
  background-color: transparent;
  border-radius: 0;
}

pre {
  font-size: 0.875rem;
  line-height: 1.5em;
  border-radius: 0.25rem;
  padding: 0.59375rem;
}
.highlight pre {
  border: none;
  background: none;
  margin: 0;
}
.highlight > pre {
  background-image: linear-gradient(
    rgba(0,0,0,0.03), rgba(0,0,0,0.03) 1.5em, rgba(0,0,0,0.02) 1.5em, rgba(0,0,0,0.02) 3em);
  background-size: auto 3em;
  background-position-y: 0.625rem;
  border: 1px solid rgba(0,0,0,0.1);
  border-left: 0.4375rem solid #444;
}
.highlight > pre:not([class~="highlight"]) { /* code block with line number */
  padding: 0;
}
.highlight table,
.highlight tr,
.highlight td { /* to be removed after fixing table styles */
  border: none;
  background: none;
  padding: 0;
  margin: 0;
}
.highlight pre.lineno {
  color: rgba(0,0,0,0.3);
  border-radius: 0;
  border-right: 2px solid #444;
}

/* Make line numbers unselectable: excludes line numbers from copy-paste user ops */
.lineno {
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
}
.lineno::selection, .lineno::-moz-selection {
  background: none;
}

/* Fix table border github gist snippets */

.gist, .gist-file table tr {
  border: unset;
}

.gist, .gist-file table tr td {
  border: unset;
}

/* --- Social media sharing section --- */

#social-share-section {
  margin-bottom: 1.875rem;
  margin-top: 1.875rem;
}

/* --- Notification boxes --- */
.box-note,
.box-warning,
.box-error,
.box-success {
  padding: 0.9375rem 0.9375rem 0.9375rem 0.625rem;
  margin: 1.25rem 1.25rem 1.25rem 0.3125rem;
  border: 1px solid #eee;
  border-left-width: 0.3125rem;
  border-radius: 0.3125rem 0.1875rem 0.1875rem 0.3125rem;
}

.box-note {
  background-color: #eee;
  border-left-color: #2980b9;
}

.box-warning {
  background-color: #fdf5d4;
  border-left-color: #f1c40f;
}

.box-error {
  background-color: #f4dddb;
  border-left-color: #c0392b;
}

.box-success {
  background-color: #98FB98;
  border-left-color: #3CB371;
}

/* --- Misc blog post styles --- */

.blog-post :first-child {
  margin-top: 0;
}

.blog-post img {
  max-width: 100%;
}

.blog-post .caption {
  text-align: center;
  font-size: 0.875rem;
  padding: 0.625rem;
  font-style: italic;
  color: #777;
  margin: 0;
  display: block;
  border-bottom-right-radius: 0.3125rem;
  border-bottom-left-radius: 0.3125rem;
}

.blog-post hr {
  max-width: 25%;
  border-width: 0.25rem;
  border-radius: 0.1875rem;
  border-color: var(--mid-col);
}

.blog-post blockquote {
  padding: 0.625rem 1.25rem;
  margin: 0 0 1.25rem;
  font-size: 1.1rem;
  border-left: 0.3125rem solid #eee;
}

.blog-post blockquote p:last-child {
  margin-bottom: 0;
}

.center {
  display: block;
  margin: 0 auto;
}

/* Search bar */
#beautifuljekyll-search-overlay {
  font-family: var(--header-font);
  display: none;
  z-index: 999999;
  position: fixed;
  background: rgba(0,0,0,0.9);
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  text-align: center;
  padding: 1rem;
}

#nav-search-exit {
  position: absolute;
  top: 1.5rem;
  cursor: pointer;
  right: 25%;
  margin-right: 2rem;
  color: #555;
  font-size: 2rem;
  line-height: 2rem;
  font-weight: bold;
}
#nav-search-exit:hover {
  color: #000;
}
#nav-search-input {
  text-align: center;
  background: #e7edee;
  margin: auto;
  display: block;
  font-size: 2rem;
  width: 50%;
  transition: width 300ms ease;
  color: #222;
  border-radius: 5rem;
  outline: none;
  border: none;
  padding: 0 3rem;
}

@media (max-width: 1199px) {
  #nav-search-input {
    width: 75%;
  }
  #nav-search-exit {
    right: 12.5%;
  }
}
@media (max-width: 767px) {
  #nav-search-input {
    width: 100%;
  }
  #nav-search-exit {
    right: 0;
  }
}
#nav-search-input:focus {
  background: #f3f8fe;
  box-shadow: 0px 0.15rem 1rem #e7f4ff;
  outline: none;
}

#nav-search-input::placeholder {
  color: #777;
}

#search-results-container {
  list-style: none;
  padding-left: unset;
  margin-top: 1.5rem;
  color: #fff;
  font-size: 1.5rem;
  max-height: calc(100vh - 6.5rem);
  overflow-y: auto;
}
#search-results-container a {
  color: #fff;
  text-decoration: none;
}
#search-results-container a:hover {
  color: #fff;
  text-decoration: underline;
}

#nav-search-icon {
  display: inline-block;
}
#nav-search-text {
  display: none;
}

@media (max-width: 1199px) {
  #nav-search-icon {
    display: none;
  }
  #nav-search-text {
    display: inline-block;
  }
}

